--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.5.1",
     "react-dom": "^18.2.0",
+    "react-phone-number-input": "^3.2.19",
     "react-schedule-meeting": "^4.2.0",
     "react-scripts": "5.0.1",
     "react-timezone-select": "^1.4.0",
